--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "webpack-merge": "^0.8.3"
   },
   "dependencies": {
+    "alt": "^0.18.4",
+    "alt-container": "^1.0.2",
+    "alt-utils": "^1.0.0",
     "babel-loader": "^6.2.4",
+    "node-uuid": "^1.4.7",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   }
